--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.5",
+    "@types/ws": "^8.5.5",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
