--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "build/app.js",
   "scripts": {
     "build": "tsc",
     "dev": "ts-node-dev src/app.ts",
@@ -13,13 +13,14 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.4.5",
+    "@types/uuid": "^9.0.2",
     "@types/ws": "^8.5.5",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "nanoid": "^4.0.2",
+    "uuid": "^9.0.0",
     "ws": "^8.13.0"
   }
 }
