--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,10 @@
     "react": "^18.2.0",
     "react-avatar": "^5.0.3",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.2",
     "react-simple-wysiwyg": "^2.2.5",
-    "react-use-websocket": "^4.3.1"
+    "react-use-websocket": "^4.3.1",
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
