--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^20.4.5",
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.4.6",
     "@types/uuid": "^9.0.2",
     "@types/ws": "^8.5.5",
     "ts-node": "^10.9.1",
@@ -20,6 +21,7 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "uuid": "^9.0.0",
     "ws": "^8.13.0"
   }
